--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@angular/common": "^17.3.6",
     "@angular/compiler": "^17.3.6",
     "@angular/core": "^17.3.6",
+    "@angular/fire": "^17.0.1",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^17.3.6",
     "@angular/material": "^17.3.6",
     "@angular/platform-browser": "^17.3.6",
     "@angular/platform-browser-dynamic": "^17.3.6",
     "@angular/router": "^17.3.6",
-    "rxjs": "~7.5.0",
+    "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.4"
   },
